--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html> g
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="wifth=device-width, intial-scale+1.0">
-        <title>Document</title>
+        <title>Portfolio Website</title>
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
