--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 
     </head>
     <body>
+        <div id="header">
+            <div class="container">
+                <nav>
+                    <img src="images/logo.png" class="logo">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Me</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Skills</a></li>
+                        <li><a href="#">Contact Me</a></li>
+
+
+
+
+                    </ul>
+                </nav>
+
+            </div>
+
+        </div>
         
     </body>
     </html>
